# Image-Compression

./: CMakeLists.txt  Makefile  README.md  pa3  pa3test  partners.txt  stats.cpp  stats.h  testComp.cpp  toqutree.cpp  toqutree.h
cs221util/: PNG.cpp
